Add Incident API - PUT incident action (with Swagger)
